# WoWStatTracker

./: .coveragerc  .flake8  .gitignore  CMakeLists.txt  LICENSE  LICENSE.rtf  MAC_APP_README.md  MANUAL.txt  Makefile  README.md  WoWStatTracker.spec  build_mac_app.sh  create_dmg.sh  create_icon.py  icon.icns  install_mac_app.sh  model.py  pyi_rth_gtk.py  requirements.txt  test_gtk_bundle.py  view.py  wowstat.py
WoWStatTracker_Addon/: Core.lua  DataCollector.lua  EventHandler.lua  INSTALL.md  README.md  UI.lua  WoWStatTracker.toc  WoWStatTracker_Addon.toc
doc/: README.md  RELEASE_NOTES_1.2.0.md  RELEASE_NOTES_1.3.0.md  RELEASE_NOTES_1.4.0.md  architecture.md  development.md  user_guide.md
mac/: WoWStatTracker.spec  build_mac_app.sh  create_dmg.sh  icon.icns  install_mac_app.sh
native/: .gitignore  CMakeLists.txt  README.md
native/packaging/macos/: Info.plist.in  create_dmg.sh  entitlements.plist
native/packaging/windows/: WoWStatTracker.wxs  package.bat
native/src/core/: character.h  character_store.c  character_store.h  config.c  config.h  lua_parser.c  notification.c  notification.h  types.h  util.c  util.h  version.h.in
native/src/gui/macos/: AppDelegate.m  CharacterTableView.m  MainWindowController.m
native/src/gui/windows/: WoWStatTracker.manifest  main.c  main_window.c  main_window.h  resource.h  resource.rc
native/src/platform/macos/: platform_macos.m
native/test/: CMakeLists.txt  test_main.c
packaging/macos/: Info.plist.in  build.sh  create_dmg.sh  create_dmg_background.py  icon.icns
packaging/windows/: WoWStatTracker.wxs  build.bat  installer.nsi  package.bat
scripts/: gear_report.py
src/: model.py  notification_model.py  notification_view.py  view.py  wowstat.py
src/core/: character.c  character.h  character_store.c  config.c  config.h  lua_parser.c  lua_parser.h  notification.c  paths.c  paths.h  types.h  week_id.c  week_id.h
src/gui/macos/: AppDelegate.h  AppDelegate.m  CharacterTableView.h  CharacterTableView.m  MainWindowController.h  MainWindowController.m  main.m
src/gui/windows/: dialogs.c  main_window.c  main_window.h  resource.h  resource.rc
src/platform/: platform.h
src/platform/windows/: platform_windows.c
test/: CMakeLists.txt  __init__.py  conftest.py  test_character.c  test_character_store.c  test_config.c  test_lua_parser.c  test_main.c  test_model.py  test_notification.c  test_notification_model.py  test_paths.c  test_platform.c  test_suites.h  test_util.c  test_week_id.c  test_wowstat.py
win/: SETUP.md  WoWStatTracker.spec  build_win_app.bat  create_icon.py  create_zip.bat  pyi_rth_gtk.py
